// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page <Flavors /> renders correctly 1`] = `<Pagination />`;

exports[`Page <Flavors /> renders correctly when stash is not loaded 1`] = `
<div
  className="container"
>
  <div
    className="container-fluid"
  >
    <div
      className="text-center row"
    >
      <div
        className="col"
      >
        <h1>
          Flavors
        </h1>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="text-left ml-2 mb-4 col"
      >
        <ToggleButton />
         
        <span>
          Enable Flavor Stash
        </span>
      </div>
    </div>
  </div>
  <p />
  <div
    className="table-responsive"
  >
    <table
      className="table table-sm table-striped table-bordered table-hover"
    >
      <thead>
        <tr
          className="text-center"
        >
          <th>
            ID
          </th>
          <th>
            Vendor
          </th>
          <th>
            Name
          </th>
          <th>
            Slug
          </th>
          <th>
            Density
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            className="text-center"
          >
            1
          </td>
          <td>
            Capella
          </td>
          <td>
            27 Bears
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            2
          </td>
          <td>
            Capella
          </td>
          <td>
            27 Fish
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            3
          </td>
          <td>
            Capella
          </td>
          <td>
            Acai
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            4
          </td>
          <td>
            Capella
          </td>
          <td>
            Amaretto
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            5
          </td>
          <td>
            Capella
          </td>
          <td>
            Anise
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
      </tbody>
    </table>
  </div>
  <p />
  <PagerInfo />
</div>
`;

exports[`Page <Flavors /> renders correctly when user is not logged in 1`] = `
<div
  className="container"
>
  <div
    className="container-fluid"
  >
    <div
      className="text-center row"
    >
      <div
        className="col"
      >
        <h1>
          Flavors
        </h1>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="text-left ml-2 mb-4 col"
      >
        <small>
          Log in to Enable Flavor Stash
        </small>
      </div>
    </div>
  </div>
  <p />
  <div
    className="table-responsive"
  >
    <table
      className="table table-sm table-striped table-bordered table-hover"
    >
      <thead>
        <tr
          className="text-center"
        >
          <th>
            ID
          </th>
          <th>
            Vendor
          </th>
          <th>
            Name
          </th>
          <th>
            Slug
          </th>
          <th>
            Density
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            className="text-center"
          >
            1
          </td>
          <td>
            Capella
          </td>
          <td>
            27 Bears
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            2
          </td>
          <td>
            Capella
          </td>
          <td>
            27 Fish
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            3
          </td>
          <td>
            Capella
          </td>
          <td>
            Acai
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            4
          </td>
          <td>
            Capella
          </td>
          <td>
            Amaretto
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            5
          </td>
          <td>
            Capella
          </td>
          <td>
            Anise
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
      </tbody>
    </table>
  </div>
  <p />
  <PagerInfo />
</div>
`;

exports[`Page <Flavors /> renders current user flavors correctly 1`] = `[Function]`;
